--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <link rel="shortcut icon" type="image/png" href="assets/gimnasio.png" />
 
   <!-- Todo: put here your site title -->
-  <title>[Your name here] | Developer</title>
+  <title>Pablo Ramirez | Engineer</title>
   <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
   <meta name="keywords" content="[username], [name], skill" />
   <!-- Todo: improve your SEO by adding a small description of you -->
@@ -68,14 +68,14 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info load-hidden">
             <p class="about-wrapper__info-text">
-              I'm an enthusiast developer who majored in Mechatronic Engineer from Universidad Panamericana on June 2023. 
-              Throughout the years I have made projects in different languages and platforms giving me the basics for scripting and developing.
+              I'm an enthusiastic developer who majored in Mechatronics Engineering from Universidad Panamericana in 2023. 
+              Throughout the years, I have worked on projects in various languages and platforms, which have provided me with the basics for programming and development. I also developed mechatronic projects at Topol Studio since 2024.
             </p>
             <p class="about-wrapper__info-text">
-              I also love going to the gym, scripting and always looking to learn more.
+              I love going to the gym, reading, and always seeking to learn more.
             </p>
             <span class="d-flex mt-3">
-              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/CV_PabloRamirez_EN.pdf">
+              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/Pablo_s_Resume__2026_.pdf">
                 View Resume
               </a>
             </span>
@@ -236,7 +236,7 @@
       <h2 class="section-title">Contact</h2>
       <div class="contact-wrapper load-hidden">
         <p class="contact-wrapper__text">Feel free to contact me</p>
-        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:p.abo111@hotmail.com">Send email</a>
+        <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="mailto:jopabloram@gmail.com">Send email</a>
       </div>
     </div>
   </section>
